# log

./: CMakeLists.txt
src/detri/: log.cpp  log.hpp
src/test/: spdlog_logger_test.cpp
